--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,8 @@ plugins {
 }
 apply plugin: 'org.spongepowered.mixin'
 
-version = mod_version
-group = mod_group_id
-
 base {
-	archivesName = "${mod_id}-${minecraft_version}-forge-${forge_version}"
+	archivesName = "${mod_id}-${minecraft_version}-forge-${forge_version}-${mod_version}"
 }
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -46,48 +43,28 @@ minecraft {
 		configureEach {
 			workingDirectory project.file('run')
 			arg "-mixin.config=${mod_id}.mixin.json"
-		}
-		client {
-			property 'forge.logging.markers', 'REGISTRIES'
 			property 'forge.logging.console.level', 'debug'
-			property 'forge.enabledGameTestNamespaces', mod_id
+			property 'forge.logging.markers', 'REGISTRIES'
 			mods {
 				"${mod_id}" {
 					source sourceSets.main
 				}
 			}
+		}
+		client {
+			property 'forge.enabledGameTestNamespaces', mod_id
 		}
 
 		server {
-			property 'forge.logging.markers', 'REGISTRIES'
-			property 'forge.logging.console.level', 'debug'
 			property 'forge.enabledGameTestNamespaces', mod_id
-			mods {
-				"${mod_id}" {
-					source sourceSets.main
-				}
-			}
+			args '--nogui'
 		}
 		gameTestServer {
-			property 'forge.logging.markers', 'REGISTRIES'
-			property 'forge.logging.console.level', 'debug'
 			property 'forge.enabledGameTestNamespaces', mod_id
-			mods {
-				"${mod_id}" {
-					source sourceSets.main
-				}
-			}
 		}
 		data {
-			property 'forge.logging.markers', 'REGISTRIES'
-			property 'forge.logging.console.level', 'debug'
 			// Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
 			args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-			mods {
-				"${mod_id}" {
-					source sourceSets.main
-				}
-			}
 		}
 	}
 }
@@ -99,7 +76,6 @@ repositories {
 	maven { url 'https://maven.aliyun.com/repository/public' }
 	maven { url 'https://maven.aliyun.com/repository/google' }
 	maven { url 'https://jitpack.io' }
-	mavenCentral()
 }
 
 dependencies {
@@ -136,28 +112,28 @@ jar {
 		attributes(["Specification-Title"     : mod_id,
 					"Specification-Vendor"    : mod_authors,
 					"Specification-Version"   : "1",
-					"Implementation-Title"    : "forge-1.20",
-					"Implementation-Version"  : mod_version,
+					"Implementation-Title"    : project.name,
+					"Implementation-Version"  : project.jar.archiveVersion,
 					"Implementation-Vendor"   : mod_authors,
 					"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
 					"MixinConfigs"            : "${mod_id}.mixin.json"])
 	}
 }
-apply plugin: 'org.spongepowered.mixin'
+
 jar.finalizedBy('reobfJar')
 publishing {
 	publications {
-		mavenJava(MavenPublication) {
+		register('mavenJava', MavenPublication) {
 			artifact jar
 		}
 	}
 	repositories {
-		mavenLocal()
 		maven {
 			url "file://${project.projectDir}/mcmodsrepo"
 		}
 	}
 }
+
 tasks.withType(JavaCompile).configureEach {
 	options.encoding = 'UTF-8'
 }
