--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,12 @@ buildscript {
 		mavenLocal()
 		maven { url = 'https://maven.minecraftforge.net' }
 		maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
-		maven {
-			url = 'https://repo.spongepowered.org/repository/maven-public/'
-			content { includeGroup "org.spongepowered" }
-		}
 		mavenCentral()
 	}
 	dependencies {
 		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
 	}
 }
-
 
 plugins {
 	id 'eclipse'
@@ -22,12 +17,11 @@ plugins {
 	id 'net.minecraftforge.gradle' version '[6.0,6.2)'
 }
 apply plugin: 'org.spongepowered.mixin'
-
-version = mod_version
-group = mod_group_id
+def mixin_config_file = "${mod_id}.mixin.json"
+def mixin_refmap_file = "${mod_id}.refmap.json"
 
 base {
-	archivesName = "${mod_id}-${minecraft_version}-forge-${forge_version}"
+	archivesName = "${mod_id}-${minecraft_version}-forge-${forge_version}-${mod_version}"
 }
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -35,8 +29,8 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 
 mixin {
-	add sourceSets.main, "${mod_id}.refmap.json"
-	println "Mixin config file: " + "${mod_id}.mixin.json"
+	add sourceSets.main, "${mixin_refmap_file}"
+	println "Mixin config file: ${mixin_config_file}"
 }
 
 minecraft {
@@ -45,49 +39,27 @@ minecraft {
 	runs {
 		configureEach {
 			workingDirectory project.file('run')
-			arg "-mixin.config=${mod_id}.mixin.json"
+			property 'forge.logging.markers', 'REGISTRIES'
+			property 'forge.logging.console.level', 'debug'
+			arg "-mixin.config=${mixin_config_file}"
+			mods {
+				"${mod_id}" {
+					source sourceSets.main
+				}
+			}
 		}
 		client {
-			property 'forge.logging.markers', 'REGISTRIES'
-			property 'forge.logging.console.level', 'debug'
 			property 'forge.enabledGameTestNamespaces', mod_id
-			mods {
-				"${mod_id}" {
-					source sourceSets.main
-				}
-			}
 		}
-
 		server {
-			property 'forge.logging.markers', 'REGISTRIES'
-			property 'forge.logging.console.level', 'debug'
 			property 'forge.enabledGameTestNamespaces', mod_id
-			mods {
-				"${mod_id}" {
-					source sourceSets.main
-				}
-			}
+			args '--nogui'
 		}
 		gameTestServer {
-			property 'forge.logging.markers', 'REGISTRIES'
-			property 'forge.logging.console.level', 'debug'
 			property 'forge.enabledGameTestNamespaces', mod_id
-			mods {
-				"${mod_id}" {
-					source sourceSets.main
-				}
-			}
 		}
 		data {
-			property 'forge.logging.markers', 'REGISTRIES'
-			property 'forge.logging.console.level', 'debug'
-			// Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
 			args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-			mods {
-				"${mod_id}" {
-					source sourceSets.main
-				}
-			}
 		}
 	}
 }
@@ -119,14 +91,12 @@ processResources {
 	filesMatching(resourceTargets) {
 		expand replaceProperties
 	}
-
-
 	def buildProps = project.properties.clone()
 	buildProps.put('file', [jarVersion: project.version])
 	filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
 		expand buildProps
 	}
-	filesMatching(["${mod_id}.mixin.json".toString()]) {
+	filesMatching([mixin_config_file.toString()]) {
 		expand buildProps
 	}
 }
@@ -136,14 +106,14 @@ jar {
 		attributes(["Specification-Title"     : mod_id,
 					"Specification-Vendor"    : mod_authors,
 					"Specification-Version"   : "1",
-					"Implementation-Title"    : "forge-1.20",
-					"Implementation-Version"  : mod_version,
+					"Implementation-Title"    : project.name,
+					"Implementation-Version"  : project.jar.archiveVersion,
 					"Implementation-Vendor"   : mod_authors,
 					"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-					"MixinConfigs"            : "${mod_id}.mixin.json"])
+					"MixinConfigs"            : mixin_config_file])
 	}
 }
-apply plugin: 'org.spongepowered.mixin'
+
 jar.finalizedBy('reobfJar')
 publishing {
 	publications {
