--- a/build.gradle
+++ b/build.gradle
@@ -1,128 +1,51 @@
-buildscript {
-	repositories {
-		mavenLocal()
-		maven {
-			url = 'https://maven.minecraftforge.net'
-		}
-		maven {
-			url = 'https://repo.spongepowered.org/repository/maven-public/'
-		}
-		mavenCentral()
+plugins {
+	id "architectury-plugin" version "3.4-SNAPSHOT"
+	id "dev.architectury.loom" version "1.3-SNAPSHOT" apply false
+}
+architectury {
+	minecraft = rootProject.minecraft_version
+}
+subprojects {
+	apply plugin: "dev.architectury.loom"
+	loom {
+		silentMojangMappingsLicense()
 	}
 	dependencies {
-		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
+		// The following line declares the mojmap mappings, you may use other mappings as well
+		mappings loom.officialMojangMappings()
+		// The following line declares the yarn mappings you may select this one as well.
+		// mappings "net.fabricmc:yarn:1.20.1+build.10:v2"
 	}
 }
-plugins {
-	id 'eclipse'
-	id 'idea'
-	id 'maven-publish'
-	id 'net.minecraftforge.gradle' version '[6.0.14,6.2)'
-}
-apply plugin: 'org.spongepowered.mixin'
-def mixin_config_file = "${mod_id}.mixin.json"
-def mixin_refmap_file = "${mod_id}.refmap.json"
-base {
-	archivesName = "${mod_id}-${minecraft_version}-forge-${forge_version}-${mod_version}"
-}
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
-println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
-mixin {
-	add sourceSets.main, "${mixin_refmap_file}"
-	println "Mixin config file: ${mixin_config_file}"
-}
-minecraft {
-	mappings channel: mapping_channel, version: mapping_version
-	copyIdeResources = true
-	runs {
-		configureEach {
-			workingDirectory project.file('run')
-			arg "-mixin.config=${mixin_config_file}"
-			property 'forge.logging.console.level', 'debug'
-			property 'forge.logging.markers', 'REGISTRIES'
-			mods {
-				"${mod_id}" {
-					source sourceSets.main
-				}
-			}
-		}
-		client {
-			property 'forge.enabledGameTestNamespaces', mod_id
-		}
-		server {
-			property 'forge.enabledGameTestNamespaces', mod_id
-			args '--nogui'
-		}
-		gameTestServer {
-			property 'forge.enabledGameTestNamespaces', mod_id
-		}
-		data {
-			args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-		}
+allprojects {
+	apply plugin: "java"
+	apply plugin: "architectury-plugin"
+	apply plugin: "maven-publish"
+	base {
+		archivesName = rootProject.archives_base_name
 	}
-}
-sourceSets.main.resources {
-	srcDir 'src/generated/resources'
-}
-repositories {
-	mavenLocal()
-	maven {
-		url 'https://maven.aliyun.com/repository/public'
-	}
-	maven {
-		url 'https://maven.aliyun.com/repository/google'
-	}
-}
-dependencies {
-	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-}
-def resourceTargets = ['META-INF/mods.toml', 'pack.mcmeta']
-def replaceProperties = [minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
-						 forge_version       : forge_version, forge_version_range: forge_version_range,
-						 loader_version_range: loader_version_range,
-						 mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
-						 mod_authors         : mod_authors, mod_description: mod_description]
-processResources {
-	inputs.properties replaceProperties
-	replaceProperties.put 'project', project
-	filesMatching(resourceTargets) {
-		expand replaceProperties
-	}
-	def buildProps = project.properties.clone()
-	buildProps.put('file', [jarVersion: project.version])
-	filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
-		expand buildProps
-	}
-	filesMatching([mixin_config_file.toString()]) {
-		expand buildProps
-	}
-}
-jar {
-	manifest {
-		attributes(["Specification-Title"     : mod_id,
-					"Specification-Vendor"    : mod_authors,
-					"Specification-Version"   : "1",
-					"Implementation-Title"    : project.name,
-					"Implementation-Version"  : project.jar.archiveVersion,
-					"Implementation-Vendor"   : mod_authors,
-					"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-					"MixinConfigs"            : mixin_config_file])
-	}
-}
-jar.finalizedBy('reobfJar')
-publishing {
-	publications {
-		register('mavenJava', MavenPublication) {
-			artifact jar
-		}
-	}
+	version = rootProject.mod_version
+	group = rootProject.maven_group
 	repositories {
+		// Add repositories to retrieve artifacts from in here.
+		// You should only use this when depending on other mods because
+		// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
+		// See https://docs.gradle.org/current/userguide/declaring_repositories.html
+		// for more information about repositories.
+		mavenLocal()
 		maven {
-			url "file://${project.projectDir}/mcmodsrepo"
+			url 'https://maven.aliyun.com/repository/public'
+		}
+		maven {
+			url 'https://maven.aliyun.com/repository/google'
 		}
 	}
-}
-tasks.withType(JavaCompile).configureEach {
-	options.encoding = 'UTF-8'
+	tasks.withType(JavaCompile) {
+		options.encoding = "UTF-8"
+		options.release = 17
+	}
+	java {
+		withSourcesJar()
+	}
 }
