--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,13 @@
-org.gradle.jvmargs      = -Xmx3G
-org.gradle.daemon       = false
-minecraft_version       = 1.20.2
-minecraft_version_range = [1.20.2,1.21)
-forge_version           = 48.0.33
-forge_version_range     = [48,)
-loader_version_range    = [48,)
-mapping_channel         = official
-mapping_version         = 1.20.2
-mod_id                  = leawind_third_person_perspective
-mod_name                = LEAWIND's Third Person Perspective
-mod_license             = MIT
-mod_version             = 1.0.0
-mod_group_id            = net.leawind.mc.thirdpersonperspective
-mod_authors             = LEAWIND
-mod_description         = Mutch Beter third person perspective
+org.gradle.jvmargs    = -Xmx2048M
+minecraft_version     = 1.20.1
+enabled_platforms     = fabric,forge
+archives_base_name    = examplemod
+mod_version           = 1.0.0
+maven_group           = net.examplemod
+architectury_version  = 9.1.12
+fabric_loader_version = 0.14.23
+fabric_api_version    = 0.90.4+1.20.1
+forge_version         = 1.20.1-47.2.1
+
+
+
