--- a/settings.gradle
+++ b/settings.gradle
@@ -4,13 +4,22 @@ pluginManagement {
 		maven {
 			url 'https://maven.aliyun.com/repository/public'
 		}
-		gradlePluginPortal()
 		maven {
-			name = 'MinecraftForge'
-			url = 'https://maven.minecraftforge.net/'
+			url 'https://maven.aliyun.com/repository/google'
 		}
+		maven {
+			url "https://maven.fabricmc.net/"
+		}
+		maven {
+			url "https://maven.architectury.dev/"
+		}
+		maven {
+			url "https://maven.minecraftforge.net/"
+		}
+		gradlePluginPortal()
 	}
 }
-plugins {
-	id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
-}
+include("common")
+include("fabric")
+include("forge")
+rootProject.name = "architectury-example-mod"
