--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.jvmargs    = -Xmx2048M
 minecraft_version     = 1.20.1
 enabled_platforms     = fabric,forge
-archives_base_name    = examplemod
+archives_base_name    = leawind_third_person_perspective
 mod_version           = 1.0.0
-maven_group           = net.examplemod
+maven_group           = net.leawind.mc.thirdpersonperspective
 architectury_version  = 9.1.12
 fabric_loader_version = 0.14.23
 fabric_api_version    = 0.90.4+1.20.1
