--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,10 @@ allprojects {
 	apply plugin: "architectury-plugin"
 	apply plugin: "maven-publish"
 	base {
-		archivesName = rootProject.archives_base_name
+		archivesName = rootProject.mod_id
 	}
 	version = rootProject.mod_version
-	group = rootProject.maven_group
+	group = rootProject.mod_group_id
 	repositories {
 		mavenLocal()
 		maven {
