--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -29,8 +29,8 @@ dependencies {
 }
 processResources {
 	inputs.property "version", project.version
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+	filesMatching(["*.json", "*.toml"]) {
+		expand project.properties
 	}
 }
 shadowJar {
@@ -58,7 +58,7 @@ components.java {
 publishing {
 	publications {
 		mavenFabric(MavenPublication) {
-			artifactId = rootProject.archives_base_name + "-" + project.name
+			artifactId = rootProject.mod_id + "-" + project.name
 			from components.java
 		}
 	}
