--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -10,20 +10,19 @@ loom {
 	forge {
 		convertAccessWideners = true
 		extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
-		mixinConfig "leawind_third_person_perspective-common.mixins.json"
-		mixinConfig "leawind_third_person_perspective.mixins.json"
+		mixinConfig "${mod_id}-common.mixins.json"
+		mixinConfig "${mod_id}.mixins.json"
 	}
 }
 configurations {
 	common
-	shadowCommon // Don't use shadow from the shadow plugin since it *excludes* files.
+	shadowCommon
 	compileClasspath.extendsFrom common
 	runtimeClasspath.extendsFrom common
 	developmentForge.extendsFrom common
 }
 dependencies {
 	forge "net.minecraftforge:forge:${rootProject.forge_version}"
-	// Remove the next line if you don't want to depend on the API
 	modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
 	common(project(path: ":common", configuration: "namedElements")) {
 		transitive false
@@ -34,8 +33,8 @@ dependencies {
 }
 processResources {
 	inputs.property "version", project.version
-	filesMatching("META-INF/mods.toml") {
-		expand "version": project.version
+	filesMatching(["*.json", "*.toml"]) {
+		expand project.properties
 	}
 }
 shadowJar {
@@ -63,7 +62,7 @@ components.java {
 publishing {
 	publications {
 		mavenForge(MavenPublication) {
-			artifactId = rootProject.archives_base_name + "-" + project.name
+			artifactId = rootProject.mod_id + "-" + project.name
 			from components.java
 		}
 	}
