--- a/settings.gradle
+++ b/settings.gradle
@@ -22,4 +22,4 @@ pluginManagement {
 include("common")
 include("fabric")
 include("forge")
-rootProject.name = "LEAWIND's Third Person Perspective"
+rootProject.name = mod_name
