--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 processResources {
 	inputs.property "version", project.version
 	filesMatching(["*.json", "*.toml"]) {
-		expand project.properties
+		expand rootProject.properties
 	}
 }
 shadowJar {
