--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 processResources {
 	inputs.property "version", project.version
 	filesMatching(["*.json", "*.toml"]) {
-		expand project.properties
+		expand rootProject.properties
 	}
 }
 shadowJar {
