--- a/common/build.gradle
+++ b/common/build.gradle
@@ -11,7 +11,8 @@ dependencies {
 }
 processResources {
 	inputs.property "version", project.version
-	filesMatching(["*.json", "*.toml"]) {
+	filesMatching(["**.json", "**.toml", "pack.mcmeta"]) {
+		//		eachFile {
 		expand rootProject.properties
 	}
 }
