--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -29,7 +29,8 @@ dependencies {
 }
 processResources {
 	inputs.property "version", project.version
-	filesMatching(["*.json", "*.toml"]) {
+	filesMatching(["**.json", "**.toml", "pack.mcmeta"]) {
+		//		eachFile {
 		expand rootProject.properties
 	}
 }
