--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -33,8 +33,7 @@ dependencies {
 }
 processResources {
 	inputs.property "version", project.version
-	filesMatching(["**.json", "**.toml", "pack.mcmeta"]) {
-		//	eachFile {
+	eachFile {
 		expand rootProject.properties
 	}
 }
