update build output file names

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,18 @@ subprojects {
 		// mappings "net.fabricmc:yarn:1.20.1+build.10:v2"
 	}
 }
+// Define output file name
+def archiveFileNameOfPlatform(String platform) {
+	switch (platform) {
+		case "forge":
+			return "$mod_name-v$mod_version-$minecraft_version-forge-${forge_version}";
+		case "fabric":
+			return "$mod_name-v$mod_version-$minecraft_version-fabric-${fabric_loader_version}";
+		default:
+			throw new IllegalArgumentException("Unknown platform: $platform");
+	}
+}
+
 allprojects {
 	apply plugin: "java"
 	apply plugin: "architectury-plugin"
@@ -25,6 +37,12 @@ allprojects {
 	base {
 		archivesName = rootProject.mod_id
 	}
+
+	//	ext {
+	//		// TODO
+	//		forge_archive_file = "$mod_id-v$mod_version-mc-$minecraft_version-forge-$forge_version"
+	//		fabric_archive_file =  "$mod_id-v$mod_version-mc-$minecraft_version-fabric-$forge_version"
+	//	}
 	version = rootProject.mod_version
 	group = rootProject.mod_group_id
 	repositories {
