--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ minecraft_version     = 1.20.1
 enabled_platforms     = fabric,forge
 architectury_version  = 9.1.12
 fabric_loader_version = 0.14.23
-fabric_api_version    = 0.90.4+1.20.1
-forge_version         = 1.20.1-47.2.1
+fabric_api_version    = 0.90.4
+forge_version         = 47.2.1
 # mod properties
 mod_url_home          = https://github.com/LEAWIND/Third-Person-Perspective
 mod_url_issue         = https://github.com/LEAWIND/Third-Person-Perspective/issue
