--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -16,10 +16,10 @@ configurations {
 	developmentFabric.extendsFrom common
 }
 dependencies {
-	modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-	modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
+	modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
+	modApi "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}+${minecraft_version}"
 	// Remove the next line if you don't want to depend on the API
-	modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
+	modApi "dev.architectury:architectury-fabric:${architectury_version}"
 	common(project(path: ":common", configuration: "namedElements")) {
 		transitive false
 	}
@@ -49,6 +49,10 @@ sourcesJar {
 	from commonSources.archiveFile.map {
 		zipTree(it)
 	}
+}
+base {
+	archivesName = rootProject.archiveFileNameOfPlatform("fabric")
+	version = ""
 }
 components.java {
 	withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
