--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ mod_id                = leawind_third_person_perspective
 mod_authors           = LEAWIND
 mod_name              = LEAWIND's Third Person Perspective
 mod_description       = Much better third person perspective
-mod_version           = 2.0.0
+mod_version           = 2.0.0-snapshot-0.1
 mod_license           = MIT
 mod_icon              = assets/leawind_third_person_perspective/icon.png
 mod_group_id          = net.leawind.mc.thirdpersonperspective
