--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ mod_id                = leawind_third_person
 mod_authors           = Leawind
 mod_name              = Leawind's Third Person
 mod_description       = Improved third person
-mod_version           = 2.0.0-snapshot-1
-mod_license           = MIT
+mod_version           = 2.0.0-snapshot.2
+mod_license           = The MIT License (MIT)
 mod_icon              = assets/leawind_third_person/icon.png
 mod_group_id          = net.leawind.mc.thirdperson
