add dependency YACL
forge version can not launch due to a bug of the dependency.

https://github.com/SpongePowered/Mixin/issues/497
https://github.com/FabricMC/Mixin/issues/54

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) {
 		transitive false
 	}
+	// YACL
+	modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${yacl_mc_version}"
 }
 processResources {
 	inputs.property "version", project.version
