--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,23 @@
 # No quote for string
 org.gradle.jvmargs    = -Xmx2048M
+# Mod properties
+mod_name              = Leawind's Third Person
+mod_description       = Improved third person
+mod_id                = leawind_third_person
+mod_group_id          = net.leawind.mc.thirdperson
+mod_authors           = Leawind
+mod_version           = 2.0.0-snapshot.2
+mod_license           = The MIT License (MIT)
+mod_icon              = assets/leawind_third_person/icon.png
+mod_url_home          = https://github.com/LEAWIND/Third-Person
+mod_url_issue         = https://github.com/LEAWIND/Third-Person/issue
+# Minecraft Version
 minecraft_version     = 1.20.1
 # Splited by , without space
 enabled_platforms     = fabric,forge
 architectury_version  = 9.1.12
+yacl_mc_version       = 3.2.1+1.20
+yacl_version          = 3.2.1
 fabric_loader_version = 0.14.23
 fabric_api_version    = 0.90.4
 forge_version         = 47.2.1
-# mod properties
-mod_url_home          = https://github.com/LEAWIND/Third-Person
-mod_url_issue         = https://github.com/LEAWIND/Third-Person/issue
-mod_id                = leawind_third_person
-mod_authors           = Leawind
-mod_name              = Leawind's Third Person
-mod_description       = Improved third person
-mod_version           = 2.0.0-snapshot.2
-mod_license           = The MIT License (MIT)
-mod_icon              = assets/leawind_third_person/icon.png
-mod_group_id          = net.leawind.mc.thirdperson
