--- a/build.gradle
+++ b/build.gradle
@@ -41,12 +41,18 @@ allprojects {
 	group = rootProject.mod_group_id
 	repositories {
 		mavenLocal()
-		maven {
-			url 'https://maven.aliyun.com/repository/public'
-		}
-		maven {
-			url 'https://maven.aliyun.com/repository/google'
-		}
+		
+		mavenCentral()
+		maven { url 'https://maven.aliyun.com/repository/public' }
+		maven { url 'https://maven.aliyun.com/repository/google' }
+		
+		// YACL
+		maven { url "https://maven.isxander.dev/releases" }
+		maven { url "https://maven.terraformersmc.com/releases" }
+		maven { url "https://maven.quiltmc.org/repository/release" }
+		maven { url "https://jitpack.io" }
+		maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+		
 	}
 	tasks.withType(JavaCompile) {
 		options.encoding = "UTF-8"
