--- a/common/build.gradle
+++ b/common/build.gradle
@@ -8,6 +8,8 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
 	// Remove the next line if you don't want to depend on the API
 	modApi "dev.architectury:architectury:${rootProject.architectury_version}"
+	// YACL
+	modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${yacl_mc_version}"
 }
 processResources {
 	inputs.property "version", project.version
