--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,11 @@ minecraft_version     = 1.20.1
 # Splited by , without space
 enabled_platforms     = fabric,forge
 architectury_version  = 9.1.12
+#modmenu_version       =
+#https://modrinth.com/mod/yacl/versions
 yacl_mc_version       = 3.2.1+1.20
 yacl_version          = 3.2.1
+#https://fabricmc.net/develop/
 fabric_loader_version = 0.14.23
 fabric_api_version    = 0.90.4
 forge_version         = 47.2.1
