--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -26,6 +26,11 @@ dependencies {
 	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) {
 		transitive false
 	}
+	
+	// ModMenu
+	// modApi("com.terraformersmc:modmenu:${modmenu_version}") { transitive(false) }
+	// modLocalRuntime("com.terraformersmc:modmenu:${modmenu_version}") { transitive(false) }
+	
 	// YACL
 	modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${yacl_mc_version}"
 }
