--- a/gradle.properties
+++ b/gradle.properties
@@ -11,12 +11,14 @@ mod_license           = The MIT License (MIT)
 mod_icon              = assets/leawind_third_person/icon.png
 mod_url_home          = https://github.com/LEAWIND/Third-Person
 mod_url_issue         = https://github.com/LEAWIND/Third-Person/issue
+mod_url_src           = https://github.com/LEAWIND/Third-Person
 # Minecraft Version
 minecraft_version     = 1.20.1
 # Splited by , without space
 enabled_platforms     = fabric,forge
 architectury_version  = 9.1.12
-#modmenu_version       =
+# https://github.com/TerraformersMC/ModMenu/releases
+modmenu_version       = 7.2.2
 #https://modrinth.com/mod/yacl/versions
 yacl_mc_version       = 3.2.1+1.20
 yacl_version          = 3.2.1
