--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs    = -Xmx2048M
 # Mod properties
 mod_name              = Leawind's Third Person
-mod_description       = Improved third person
+mod_description       = Enhanced third-person
 mod_id                = leawind_third_person
 mod_group_id          = net.leawind.mc.thirdperson
 mod_authors           = Leawind
