--- a/gradle.properties
+++ b/gradle.properties
@@ -9,22 +9,22 @@ mod_authors           = Leawind
 mod_version           = 2.0.1
 mod_license           = The MIT License (MIT)
 mod_icon              = assets/leawind_third_person/icon.png
-mod_url_home          = https://github.com/LEAWIND/Third-Person
+mod_url_home          = https://github.com/LEAWIND/Third-Person/wiki
 mod_url_issue         = https://github.com/LEAWIND/Third-Person/issue
 mod_url_src           = https://github.com/LEAWIND/Third-Person
 # Minecraft Version
-minecraft_version     = 1.19.4
+minecraft_version     = 1.19.2
 #https://modrinth.com/mod/architectury-api/versions
 enabled_platforms     = fabric,forge
-architectury_version  = 8.2.89
+architectury_version  = 6.5.85
 #https://github.com/TerraformersMC/ModMenu/releases
 #https://modrinth.com/mod/modmenu/versions
-modmenu_version       = 6.3.1
-#https://modrinth.com/mod/yacl/versions
-yacl_mc_version       = 3.1.1+1.19.4
-yacl_version          = 3.1.1
+modmenu_version       = 4.2.0-beta.2
 #https://fabricmc.net/develop/
+# or 0.14.23
 fabric_loader_version = 0.15.3
-fabric_api_version    = 0.87.2
+# or 0.76.1
+fabric_api_version    = 0.77.0
 #https://files.minecraftforge.net/net/minecraftforge/forge/
-forge_version         = 45.2.4
+# or 43.3.2
+forge_version         = 43.3.7
