--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,12 +1,12 @@
 architectury {
-	common(rootProject.enabled_platforms.split(","))
+	common(enabled_platforms.split(","))
 }
 loom {
 	accessWidenerPath = file("src/main/resources/${mod_id}.accesswidener")
 }
 dependencies {
-	modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-	modApi "dev.architectury:architectury:${rootProject.architectury_version}"
+	modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
+	modApi "dev.architectury:architectury:${architectury_version}"
 }
 processResources {
 	inputs.property "version", project.version
