--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	modApi "dev.architectury:architectury-fabric:${architectury_version}"
 	// ModMenu
 	modApi("com.terraformersmc:modmenu:${modmenu_version}") { transitive(false) }
+	// Cloth Config API
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") { exclude(group: "net.fabricmc.fabric-api") }
+	//
 	common(project(path: ":common", configuration: "namedElements")) { transitive false }
 	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 }
