feat: make config screen

--- a/.editorconfig
+++ b/.editorconfig
@@ -106,7 +106,7 @@ ij_java_else_on_new_line                                        = false
 ij_java_enum_constants_wrap                                     = split_into_lines
 ij_java_extends_keyword_wrap                                    = normal
 ij_java_extends_list_wrap                                       = on_every_item
-ij_java_field_annotation_wrap                                   = split_into_lines
+ij_java_field_annotation_wrap                                   = off
 ij_java_finally_on_new_line                                     = false
 ij_java_for_brace_force                                         = always
 ij_java_for_statement_new_line_after_left_paren                 = false
@@ -268,21 +268,20 @@ ij_java_wrap_first_method_in_call_chain                         = false
 ij_java_wrap_long_lines                                         = true
 
 [ConfigBuilders.java]
-max_line_length                                         = 256
+max_line_length                                         = 1024
 ij_java_use_relative_indents                            = false
 ij_java_wrap_first_method_in_call_chain                 = false
 ij_java_align_multiline_chained_methods                 = false
 ij_java_align_multiline_method_parentheses              = false
 ij_java_align_multiline_parameters_in_calls             = false
 ij_java_keep_control_statement_in_one_line              = true
-ij_java_keep_multiple_expressions_in_one_line           = true
+ij_java_keep_multiple_expressions_in_one_line           = false
 ij_java_keep_simple_blocks_in_one_line                  = true
 ij_java_keep_simple_classes_in_one_line                 = true
 ij_java_keep_simple_lambdas_in_one_line                 = true
 ij_java_keep_simple_methods_in_one_line                 = true
 ij_java_method_call_chain_wrap                          = split_into_lines
 ij_java_keep_builder_methods_indents                    = false
-ij_java_wrap_long_lines                                 = false
 ij_java_builder_methods                                 = none
 ij_java_align_multiline_parameters                      = true
 ij_java_call_parameters_new_line_after_left_paren       = false
@@ -296,7 +295,6 @@ ij_java_names_count_to_use_import_on_demand             = 3
 ij_java_new_line_after_lparen_in_deconstruction_pattern = true
 ij_java_new_line_after_lparen_in_record_header          = false
 ij_java_place_assignment_sign_on_next_line              = false
-ij_java_prefer_longer_names                             = true
 ij_java_prefer_parameters_wrap                          = true
 ij_java_rparen_on_new_line_in_deconstruction_pattern    = true
 ij_java_rparen_on_new_line_in_record_header             = false
