remove logoFile path in forge mods.toml

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ version = "${mod_version}"
 displayName = "${mod_name}"
 authors = "${mod_authors}"
 description = "${mod_description}"
-logoFile = "${mod_icon}"
+logoFile = "TODO"
 
 [[dependencies."${mod_id}"]]
 modId = "forge"
